Added morpheme and polymorpheme usl parsing + morpheme equation solving.